test/src/e2e_vm_tests/test_programs/should_fail/configurables_are_immutable/src/main.sw
script;

configurable {
    C1: u64 = 5,
}

fn main() -> u64 {
    C1 = 6;
    C1
}
